fix broken link styling, fix spacing in main-header

--- a/app/styles/ember-appuniversum/_c-alert.scss
+++ b/app/styles/ember-appuniversum/_c-alert.scss
@@ -40,7 +40,7 @@ $au-alert-small-icon-size               : 1.5rem !default;
     margin-bottom: 0;
   }
 
-  .au-c-button-link {
+  .au-c-link {
     flex-shrink: 0;
   }
 }
